Fixed portfilio projects and overflow on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -527,16 +527,22 @@ section {
   flex-direction: column;
 }
 
-.project img {
-  display: block;
-  transition: transform 0.5s;
+.img-wrap {
+  position: relative;
+  overflow: hidden;
   height: 220px;
-  width: 100%;
-  object-fit: cover;
   flex-shrink: 0;
 }
 
-.project:hover img {
+.img-wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.5s;
+}
+
+.project:hover .img-wrap img {
   transform: scale(1.1);
 }
 
@@ -597,10 +603,9 @@ section {
   align-items: center;
   opacity: 0;
   transition: 0.4s;
-  height: 220px;
 }
 
-.project:hover .overlay {
+.img-wrap:hover .overlay {
   opacity: 1;
 }
 
@@ -650,6 +655,8 @@ section {
 .modal img {
   width: 100%;
   height: auto;
+  max-height: 80vh;
+  object-fit: contain;
   border-radius: 10px 10px 0 0;
   cursor: zoom-in;
   transition: transform 0.3s ease;
@@ -657,13 +664,14 @@ section {
 }
 
 .modal img.zoomed {
-  transform: scale(2);
+  max-height: none;
+  transform: scale(1.1);
   cursor: zoom-out;
 }
 
 .prev,
 .next {
-  position: absolute;
+  position: fixed;
   top: 50%;
   transform: translateY(-50%);
   font-size: 30px;
@@ -671,11 +679,11 @@ section {
   border: none;
   color: white;
   cursor: pointer;
-  z-index: 10;
+  z-index: 1003;
 }
 
-.prev { left: -50px; }
-.next { right: -50px; }
+.prev { left: 20px; }
+.next { right: 20px; }
 
 .modal-info {
   width: 100%;
@@ -1115,5 +1123,26 @@ footer ul li {
   #portfolio::after {
     bottom: -81px;
     height: 82px;
+  }
+  .prev {
+    left: 5px;
+    font-size: 20px;
+  }
+
+  .next {
+    right: 5px;
+    font-size: 20px;
+  }
+   html, body {
+    overflow-x: hidden;
+  }
+
+  .project-wide {
+    grid-column: span 1;
+  }
+
+  .about-content {
+    width: 100%;
+    box-sizing: border-box;
   }
 }
